--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,29 @@
   <body>
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
       <a class="navbar-brand" href="#">Tree Book</a>
-      <div class="nav navbar-nav">
-        <%= link_to "All Statuses", statuses_path, class: "nav-item nav-link" %>
-      </div>
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <%= link_to "All Statuses", statuses_path, class: "nav-link" %>
+        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
+              <i class="fa fa-sign-out"></i>
+            <% end %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to new_user_registration_path, class: "nav-link" do %>
+              <i class="fa fa-user-plus"></i>
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to new_user_session_path, class: "nav-link" do %>
+              <i class="fa fa-sign-in" aria-hidden="true"></i>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </nav>
     <div class="container">
       <p class="notice"><%= notice %></p>
