--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,26 @@
   </head>
   <body>
     <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-      <a class="navbar-brand" href="#">Tree Book</a>
+     <%= link_to "Tree Book", root_path, class: 'nav navbar-brand' %>
       <ul class="nav navbar-nav">
         <li class="nav-item">
           <%= link_to "All Statuses", statuses_path, class: "nav-link" %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
+            <%= link_to edit_user_registration_path, class: "nav-link" do %>
+              <i class="fa fa-user" aria-hidden='true'></i>
+            <% end %>
+          </li>
+
+          <li class="nav-item">
             <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
               <i class="fa fa-sign-out"></i>
             <% end %>
+          </li>
+
+          <li class="nav-item pull-sm-right">
+            <%= link_to current_user.profile_name%>
           </li>
         <% else %>
           <li class="nav-item">
@@ -34,8 +44,7 @@
       </ul>
     </nav>
     <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
   </body>
