--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
      <%= link_to "Tree Book", root_path, class: 'nav navbar-brand' %>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <%= link_to "All Statuses", statuses_path, class: "nav-link" %>
+          <%= link_to "All Statuses", feed_path, class: "nav-link" %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
@@ -21,7 +21,7 @@
           </li>
 
           <li class="nav-item">
-            <%= link_to destroy_user_session_path, method: :delete, class: "nav-link" do %>
+            <%= link_to logout_path, class: "nav-link" do %>
               <i class="fa fa-sign-out"></i>
             <% end %>
           </li>
@@ -31,12 +31,12 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to new_user_registration_path, class: "nav-link" do %>
+            <%= link_to register_path, class: "nav-link" do %>
               <i class="fa fa-user-plus"></i>
             <% end %>
           </li>
           <li class="nav-item">
-            <%= link_to new_user_session_path, class: "nav-link" do %>
+            <%= link_to login_path, class: "nav-link" do %>
               <i class="fa fa-sign-in" aria-hidden="true"></i>
             <% end %>
           </li>
@@ -44,7 +44,6 @@
       </ul>
     </nav>
     <div class="container">
-      <%= render 'layouts/messages' %>
       <%= yield %>
     </div>
   </body>
